fixed gap space between cards

--- a/styles/adopt.css
+++ b/styles/adopt.css
@@ -64,6 +64,7 @@ p, h1 {
 .nmcard {
     height: 500px;
     width: 300px;
+    margin: 50px 0;
     border-radius: 30px;
     border: 0px black solid;
     box-shadow: 3px 7px 7px 0px rgba(0,0,0, 0.2),
